fixed jumping graph

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+.cursor-custom {
+    cursor: url('/graphCursor.svg'), auto;
+  }
